--- a/src/app/selection/selection.component.html
+++ b/src/app/selection/selection.component.html
@@ -17,7 +17,7 @@
       </span>
   </div>
 
-  <div *ngIf="selection.isText">
+  <div *ngIf="selection.value">
     <span class="grey">
       Value =
     </span>
