--- a/src/app/xml-view/array/array.component.html
+++ b/src/app/xml-view/array/array.component.html
@@ -14,9 +14,9 @@
       </button>
     </ng-container>
 
-    <span class="tagname p-1" 
+    <span class="tagname p-1"
         (click)="onNodeClick($event)"
-        [class.selected]="selected && !selectedAttr">
+        >
       <span class="tag">&lt;</span>{{ nodes[0].name }}<span class="tag">&gt;</span>
     </span>
     <span class="py-1 array-len">
@@ -31,7 +31,7 @@
             <th class="p-1 array-index"></th>
             <th class="p-1 attr-name"
               *ngFor="let attr of nodes[0].attributeNames"
-              (click)=onNodeClick($event)>
+              (click)="onNodeClick($event)">
               {{ attr }}
             </th>
             <ng-container *ngFor="let childNode of nodes[0].childrenNames">
@@ -43,7 +43,9 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let node of nodes; let i = index">
+          <tr *ngFor="let node of nodes; let i = index"
+            [class.selected]="selection.element === node"
+            (click)="onSubNodeClick($event, node)">
             <td class="p-1 array-index">
               {{ i }}.
             </td>
