--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,7 +2,7 @@
     <div class="col-auto">
         <div class="input-group p-1">
             <input type="text" class="form-control search-input" 
-                (keyup.enter)="doSearch()"
+                (keyup.enter)="doSearch()" #searchBox
                 [(ngModel)]="searchText" placeholder="Search...">
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" (click)="doSearch()">Search</button>
