close button for search & selection

--- a/src/app/selection/selection.component.scss
+++ b/src/app/selection/selection.component.scss
@@ -4,6 +4,7 @@
   background-color: #2d2d2d;
   color: $text-col;
   border-bottom: 1px solid #424242;
+  border-top: 1px solid #424242;
 
   .col-tagname {
     color: $tagname-col;
