--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,12 +1,13 @@
 <div *ngIf="searchVisible" class="main form-row">
-    <div class="col-auto">
+    <div class="col">
         <div class="input-group p-1">
             <input type="text" class="form-control search-input" 
                 (keyup.enter)="doSearch()" #searchBox
                 [(ngModel)]="searchText" placeholder="Search...">
-            <div class="input-group-append">
+            <div class="input-group-append mr-auto">
                 <button class="btn btn-outline-secondary" type="button" (click)="doSearch()">Search</button>
             </div>
+            <button class="btn btn-dark" (click)="close()">X</button>
         </div>
     </div>
     <div class="col-auto">
