--- a/src/app/selection/selection.component.html
+++ b/src/app/selection/selection.component.html
@@ -15,6 +15,8 @@
         class="col-tagname" (click)="selectNode(i)"
         >{{ node }}<span class="grey px-1" *ngIf="!lastNode">/</span>
       </span>
+
+      <button class="btn btn-dark float-right mr-1" (click)="close()">X</button>
   </div>
 
   <div *ngIf="selection.value">
