--- a/src/app/xml-view/xml-view.component.html
+++ b/src/app/xml-view/xml-view.component.html
@@ -1,6 +1,9 @@
-<div *ngIf="parserError" class="alert alert-warning" role="alert">
-  {{parserError}}
-</div>
+<div class="d-flex flex-column h-100">
+  <div *ngIf="parserError" class="alert alert-warning" role="alert">
+    {{parserError}}
+  </div>
 
-<app-node [node]="file.tree"></app-node>
+  <app-node class="flex-grow-1 overflow-auto" [node]="file.tree"></app-node>
+  <app-selection [node]="file"></app-selection>
+</div>
 
