--- a/src/app/colors.scss
+++ b/src/app/colors.scss
@@ -6,3 +6,5 @@ $attr-val-col: orange;
 $text-col: #d4d4d4;
 $array-col: #3a3a3a;
 $selected-bg-col: #3f3f54;
+$left-bar-bg-col: #444444;
+$left-bar-border-col: #616161;
