--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -7,17 +7,17 @@
     <input type="file" id="open-file" (change)="openFile($event)" />
   </label>
 
-  <button class="btn btn-sm btn-secondary mb-2" (click)="showSearch(true)" ngbTooltip="Search">
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="showSearch(true)" ngbTooltip="Search">
     <svg class="bi" fill="currentColor">
       <use xlink:href="assets/icons/bootstrap-icons.svg#search" />
     </svg>
   </button>
-  <button class="btn btn-sm btn-secondary mb-2" (click)="expandAll()" ngbTooltip="Expand all">
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="expandAll()" ngbTooltip="Expand all">
     <svg class="bi" fill="currentColor">
       <use xlink:href="assets/icons/bootstrap-icons.svg#plus-square" />
     </svg>
   </button>
-  <button class="btn btn-sm btn-secondary mb-2" (click)="collapseAll()" ngbTooltip="Collapse all">
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="collapseAll()" ngbTooltip="Collapse all">
     <svg class="bi" fill="currentColor">
       <use xlink:href="assets/icons/bootstrap-icons.svg#dash-square" />
     </svg>
