--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -4,6 +4,12 @@
   background-color: $left-bar-bg-col;
   border-right: 1px solid $left-bar-border-col;
 
+  .logo {
+    width: 48px;
+    height: 48px;
+    margin: .5rem auto;
+  }
+
   .btn-file {
     cursor: pointer;
     input {
