--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column h-100 toolbar p-2">
 
-  <img class="logo" src="assets/icons/48x48.png" />
+  <img class="logo" src="assets/icons/48x48.png" (click)="goHome()" />
 
   <label class="btn btn-sm btn-primary btn-file" *ngIf="!loading" ngbTooltip="Open file">
     <svg class="bi" fill="currentColor">
